_generated-doc/2.7/config/quarkus-jackson.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-jackson_configuration]]link:#quarkus-jackson_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.fail-on-unknown-properties]]`link:#quarkus-jackson_quarkus.jackson.fail-on-unknown-properties[quarkus.jackson.fail-on-unknown-properties]`

[.description]
--
If enabled, Jackson will fail when encountering unknown properties. 
 You can still override it locally with `@JsonIgnoreProperties(ignoreUnknown = false)`.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.fail-on-empty-beans]]`link:#quarkus-jackson_quarkus.jackson.fail-on-empty-beans[quarkus.jackson.fail-on-empty-beans]`

[.description]
--
If enabled, Jackson will fail when no accessors are found for a type. This is enabled by default to match the default Jackson behavior.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.write-dates-as-timestamps]]`link:#quarkus-jackson_quarkus.jackson.write-dates-as-timestamps[quarkus.jackson.write-dates-as-timestamps]`

[.description]
--
If enabled, Jackson will serialize dates as numeric value(s).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.accept-case-insensitive-enums]]`link:#quarkus-jackson_quarkus.jackson.accept-case-insensitive-enums[quarkus.jackson.accept-case-insensitive-enums]`

[.description]
--
If enabled, Jackson will ignore case during Enum deserialization.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.timezone]]`link:#quarkus-jackson_quarkus.jackson.timezone[quarkus.jackson.timezone]`

[.description]
--
If set, Jackson will default to using the specified timezone when formatting dates. Some examples values are "Asia/Jakarta" and "GMT{plus}3". If not set, Jackson will use its own default.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/ZoneId.html[ZoneId]
 
|`UTC`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.serialization-inclusion]]`link:#quarkus-jackson_quarkus.jackson.serialization-inclusion[quarkus.jackson.serialization-inclusion]`

[.description]
--
Define which properties of Java Beans are to be included in serialization.
--|`always`, `non-null`, `non-absent`, `non-empty`, `non-default`, `custom`, `use-defaults` 
|

|===